# servus

./: README.md  servus.cabal
doc/: exampleConfig.yaml  exampleLongRunningTask.json  exampleRecurringTask.json  exampleTaskConf.json
src/: servus.hs
src/Servus/: Config.hs  Http.hs  Mesos.hs  Options.hs  Server.hs  Task.hs
