name:           servus
version:        0.1
synopsis:       A mesos framework that does one's bidding
homepage:       https://github.com/hellertime/servus
license:        BSD3
author:         Chris Heller
maintainer:     hellertime@gmail.com
build-type:     Simple
cabal-version:  >=1.10

executable servus
    main-is:            servus.hs
    hs-source-dirs:     src
    default-language:   Haskell2010
    build-depends:      base >=4.7 && <4.8,
                        hs-mesos >=0.20
