name:           servus
version:        0.1
synopsis:       A mesos framework that does one's bidding
homepage:       https://github.com/hellertime/servus
license:        BSD3
author:         Chris Heller
maintainer:     hellertime@gmail.com
build-type:     Simple
cabal-version:  >=1.10

executable servus
    main-is:            servus.hs
    ghc-options:        -threaded
    hs-source-dirs:     src
    default-language:   Haskell2010
    build-depends:      base >=4.7 && <5.0,
                        hs-mesos >=0.20,
                        monad-loops-stm >=0.4,
                        stm >=2.4,
                        bytestring,
                        containers,
                        yaml >=0.8,
                        unordered-containers,
                        vector,
                        text,
                        optparse-applicative >=0.11,
                        lens,
                        aeson,
                        range-space >=0.1,
                        mtl >=2.1,
                        scotty >=0.9,
                        wai-extra,
                        time,
                        http-types,
                        uuid >=1.0,
                        human-hash >=1.0
